added pairing vignette

--- a/vignettes/data_loading.Rmd
+++ b/vignettes/data_loading.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Loading TIRTLseq data in R"
+title: "Loading Paired TCR TIRTLseq data in R"
 output: html_document
 date: "2025-10-31"
 ---
