add class reference

--- a/vignettes/data_loading.Rmd
+++ b/vignettes/data_loading.Rmd
@@ -33,7 +33,7 @@ ts_data = load_tirtlseq(folder, meta_columns = c("marker", "timepoint", "version
 ## these files are named (marker)_(timepoint)_(version)_etc.tsv.gz
 ```
 
-## The TIRTLseq data object
+## The "TIRTLseqDataSet" object
 
 In R, we store TIRTLseq data in a "list", which can contain any type of unstructured data, with the following structure:
 
@@ -58,8 +58,19 @@ The list contains two slots.
 - `data` - a list with data for each sample
 
 ```{r}
-class(ts_data) ## list
 names(ts_data) ## [1] "data" "meta"
+## slots are accessible via "$"
+## ts_data$meta ## a data frame
+## ts_data$data ## a list with data for each sample
+```
+
+For convenience, this list is given the class "TIRTLseqDataSet", which has `print()` and `summary()` methods.
+
+```{r}
+class(ts_data) ## "TIRTLseqDataSet"
+
+print(ts_data)
+summary(ts_data)
 ```
 
 ### The metadata table
