--- a/vignettes/TIRTLtools.Rmd
+++ b/vignettes/TIRTLtools.Rmd
@@ -11,9 +11,9 @@ output:
 ```{r eval=FALSE}
 # install.packages("remotes") ## Run if you need to install the 'remotes' package
 remotes::install_github("NicholasClark/TIRTLtools")
-library(TIRLTtools)
+library(TIRTLtools)
 ```
-## Option 2: (advanced) Download to local folder and load using 'devtools'
+## Option 2: (advanced) Download to local folder and load using 'pkgload'
 
 Run the following line from the terminal to download the git repository.
 
